--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,26 +862,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "3011df23-29cc-4aa2-b70f-5111ca1e477e"
+        "outputId": "dae60aad-eb2e-4b88-eaa6-a12a70fc198e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Variable name   Coefficient  Standard Error  t-statistic  p-value   \n",
-            "-----------------------------------------------------------------\n",
-            "const           388.809      0.094           4127.137     0.000     \n",
-            "East            1.928        0.094           20.584       0.000     \n",
-            "South           5.071        0.091           55.659       0.000     \n",
-            "North           -23.875      0.099           -241.944     0.000     \n"
+            "  Variable name  coefficient  standard_error        t_stat       p_value\n",
+            "0         const     2.000000    3.998447e-15  5.001942e+14  1.762199e-44\n",
+            "1          East    -1.333333    4.897078e-15 -2.722712e+14  1.092611e-43\n",
+            "2         South     0.666667    9.424431e-16  7.073814e+14  6.230314e-45\n",
+            "3         North     2.666667    3.125730e-15  8.531340e+14  3.551558e-45\n"
           ]
         }
       ],
@@ -892,7 +891,7 @@
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
@@ -902,49 +901,39 @@
         "        self.results = {}\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept column to the x DataFrame.\"\"\"\n",
         "        self.x = sm.add_constant(self.x)\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Estimates the OLS regression and stores the results.\"\"\"\n",
         "        model = sm.OLS(self.y, self.x).fit()\n",
-        "        summary = model.summary2().tables[1]\n",
-        "\n",
-        "        # Loop through each variable and store the regression results in a dictionary\n",
-        "        for idx, row in summary.iterrows():\n",
-        "            self.results[idx] = {\n",
-        "                'coefficient': row['Coef.'],\n",
-        "                'standard_error': row['Std.Err.'],\n",
-        "                't_stat': row['t'],\n",
-        "                'p_value': row['P>|t|']\n",
+        "        for var_name in model.params.index:\n",
+        "            self.results[var_name] = {\n",
+        "                'coefficient': model.params[var_name],\n",
+        "                'standard_error': model.bse[var_name],\n",
+        "                't_stat': model.tvalues[var_name],\n",
+        "                'p_value': model.pvalues[var_name]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Displays the regression results in a similar format to the image.\"\"\"\n",
-        "        print(f\"{'Variable name':<15} {'Coefficient':<12} {'Standard Error':<15} {'t-statistic':<12} {'p-value':<10}\")\n",
-        "        print(\"-\" * 65)\n",
+        "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
+        "        summary_df.index.name = 'Variable name'\n",
+        "        summary_df = summary_df.reset_index()\n",
+        "        print(summary_df[['Variable name', 'coefficient', 'standard_error', 't_stat', 'p_value']])\n",
         "\n",
-        "        for var, stats in self.results.items():\n",
-        "            print(f\"{var:<15} {stats['coefficient']:<12.3f} {stats['standard_error']:<15.3f} {stats['t_stat']:<12.3f} {stats['p_value']:<10.3f}\")\n",
-        "\n",
-        "# Example of how the class can be used\n",
+        "# Example usage\n",
         "if __name__ == \"__main__\":\n",
-        "    # Generate some sample data for testing\n",
-        "    np.random.seed(0)\n",
-        "    x = pd.DataFrame({\n",
-        "        'East': np.random.randn(100),\n",
-        "        'South': np.random.randn(100),\n",
-        "        'North': np.random.randn(100)\n",
-        "    })\n",
-        "    y = pd.DataFrame({\n",
-        "        'DependentVar': 389 + 2 * x['East'] + 5 * x['South'] - 24 * x['North'] + np.random.randn(100)\n",
-        "    })\n",
+        "    # Sample data for testing\n",
+        "    x_data = pd.DataFrame({'East': [1, 2, 3, 4, 5],\n",
+        "                           'South': [2, 3, 4, 5, 6],\n",
+        "                           'North': [3, 4, 5, 6, 7]})\n",
+        "    y_data = pd.Series([10, 12, 14, 16, 18])\n",
         "\n",
-        "    # Create an instance of the RegressionModel class\n",
-        "    model = RegressionModel(x, y, create_intercept=True, regression_type=\"ols\")\n",
+        "    # Create an instance of the class\n",
+        "    model = RegressionModel(x_data, y_data, create_intercept=True, regression_type='ols')\n",
         "\n",
-        "    # Run OLS regression and display summary\n",
+        "    # Run OLS regression\n",
         "    model.ols_regression()\n",
+        "\n",
+        "    # Display summary\n",
         "    model.summary()\n"
       ]
     }
