--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,14 +862,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "dae60aad-eb2e-4b88-eaa6-a12a70fc198e"
+        "outputId": "0e180ba3-bb23-4b71-d86c-c6dd9e577af2"
       },
       "outputs": [
         {
@@ -886,14 +886,20 @@
       ],
       "source": [
         "#si-exercise\n",
+        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
+        "        if not isinstance(x, (pd.DataFrame, pd.Series)):\n",
+        "            raise TypeError(\"x must be a Pandas DataFrame or Series.\")\n",
+        "        if not isinstance(y, (pd.DataFrame, pd.Series)):\n",
+        "            raise TypeError(\"y must be a Pandas DataFrame or Series.\")\n",
+        "\n",
+        "        self.x = x if isinstance(x, pd.DataFrame) else pd.DataFrame(x)\n",
+        "        self.y = y if isinstance(y, pd.Series) else pd.Series(y)\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
         "        if self.create_intercept:\n",
@@ -901,9 +907,12 @@
         "        self.results = {}\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        self.x = sm.add_constant(self.x)\n",
+        "        if 'const' not in self.x.columns:\n",
+        "            self.x.insert(0, 'const', 1)\n",
         "\n",
         "    def ols_regression(self):\n",
+        "        if self.regression_type != 'ols':\n",
+        "            raise ValueError(\"Only 'ols' regression type is supported in this version.\")\n",
         "        model = sm.OLS(self.y, self.x).fit()\n",
         "        for var_name in model.params.index:\n",
         "            self.results[var_name] = {\n",
@@ -914,10 +923,12 @@
         "            }\n",
         "\n",
         "    def summary(self):\n",
+        "        if not self.results:\n",
+        "            raise ValueError(\"No regression has been run. Please run a regression first.\")\n",
         "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
         "        summary_df.index.name = 'Variable name'\n",
         "        summary_df = summary_df.reset_index()\n",
-        "        print(summary_df[['Variable name', 'coefficient', 'standard_error', 't_stat', 'p_value']])\n",
+        "        return summary_df[['Variable name', 'coefficient', 'standard_error', 't_stat', 'p_value']]\n",
         "\n",
         "# Example usage\n",
         "if __name__ == \"__main__\":\n",
@@ -934,7 +945,8 @@
         "    model.ols_regression()\n",
         "\n",
         "    # Display summary\n",
-        "    model.summary()\n"
+        "    summary = model.summary()\n",
+        "    print(summary)\n"
       ]
     }
   ],
