--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,14 +862,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "bb687add-37f4-4703-d0a1-f35dade56607"
+        "outputId": "141c20a4-7da3-4ebd-888d-8352c00f7b33"
       },
       "outputs": [
         {
@@ -931,7 +931,7 @@
         "        return summary_df[['Variable name', 'coefficient', 'standard_error', 't_stat', 'p_value']]\n",
         "\n",
         "# Example usage\n",
-        "if __name__ == \"__main__\":\n",
+        "def main():\n",
         "    # Sample data for testing\n",
         "    x_data = pd.DataFrame({'East': [1, 2, 3, 4, 5],\n",
         "                           'South': [2, 3, 4, 5, 6],\n",
@@ -946,7 +946,11 @@
         "\n",
         "    # Display summary\n",
         "    summary = model.summary()\n",
-        "    print(summary)\n"
+        "    print(summary)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "\n"
       ]
     }
   ],
