--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,94 +862,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "141c20a4-7da3-4ebd-888d-8352c00f7b33"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  Variable name  coefficient  standard_error        t_stat       p_value\n",
-            "0         const     2.000000    3.998447e-15  5.001942e+14  1.762199e-44\n",
-            "1          East    -1.333333    4.897078e-15 -2.722712e+14  1.092611e-43\n",
-            "2         South     0.666667    9.424431e-16  7.073814e+14  6.230314e-45\n",
-            "3         North     2.666667    3.125730e-15  8.531340e+14  3.551558e-45\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
-        "\n",
-        "import numpy as np\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
-        "        if not isinstance(x, (pd.DataFrame, pd.Series)):\n",
-        "            raise TypeError(\"x must be a Pandas DataFrame or Series.\")\n",
-        "        if not isinstance(y, (pd.DataFrame, pd.Series)):\n",
-        "            raise TypeError(\"y must be a Pandas DataFrame or Series.\")\n",
-        "\n",
-        "        self.x = x if isinstance(x, pd.DataFrame) else pd.DataFrame(x)\n",
-        "        self.y = y if isinstance(y, pd.Series) else pd.Series(y)\n",
+        "        self.x = x.copy()  # Exogenous variables\n",
+        "        self.y = y.copy()  # Endogenous variable\n",
         "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type\n",
+        "        self.regression_type = regression_type.lower()\n",
+        "        self.results = {}  # Dictionary to store regression results\n",
+        "\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
-        "        self.results = {}\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        if 'const' not in self.x.columns:\n",
-        "            self.x.insert(0, 'const', 1)\n",
+        "        \"\"\"Adds an intercept (column of ones) to the exogenous variable data frame.\"\"\"\n",
+        "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        if self.regression_type != 'ols':\n",
-        "            raise ValueError(\"Only 'ols' regression type is supported in this version.\")\n",
-        "        model = sm.OLS(self.y, self.x).fit()\n",
-        "        for var_name in model.params.index:\n",
-        "            self.results[var_name] = {\n",
-        "                'coefficient': model.params[var_name],\n",
-        "                'standard_error': model.bse[var_name],\n",
-        "                't_stat': model.tvalues[var_name],\n",
-        "                'p_value': model.pvalues[var_name]\n",
+        "        \"\"\"Performs OLS regression and stores the results in the dictionary.\"\"\"\n",
+        "        # Ensure correct order: intercept column should be first if present\n",
+        "        if 'intercept' in self.x.columns:\n",
+        "            X = self.x[['intercept'] + [col for col in self.x.columns if col != 'intercept']]\n",
+        "        else:\n",
+        "            X = self.x\n",
+        "\n",
+        "        # Fit the OLS model\n",
+        "        model = sm.OLS(self.y, X).fit()\n",
+        "        summary = model.summary2().tables[1]  # Retrieve coefficient table\n",
+        "\n",
+        "        # Populate the results dictionary\n",
+        "        for index, row in summary.iterrows():\n",
+        "            self.results[index] = {\n",
+        "                'coefficient': row['Coef.'],\n",
+        "                'standard_error': row['Std.Err.'],\n",
+        "                't_stat': row['t'],\n",
+        "                'p_value': row['P>|t|']\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        if not self.results:\n",
-        "            raise ValueError(\"No regression has been run. Please run a regression first.\")\n",
+        "        \"\"\"Displays the summary table with regression results.\"\"\"\n",
+        "        # Create a DataFrame from the results dictionary\n",
         "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
-        "        summary_df.index.name = 'Variable name'\n",
-        "        summary_df = summary_df.reset_index()\n",
-        "        return summary_df[['Variable name', 'coefficient', 'standard_error', 't_stat', 'p_value']]\n",
+        "        summary_df.reset_index(inplace=True)\n",
+        "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error',\n",
+        "                              't-statistic', 'p-value']\n",
         "\n",
-        "# Example usage\n",
-        "def main():\n",
-        "    # Sample data for testing\n",
-        "    x_data = pd.DataFrame({'East': [1, 2, 3, 4, 5],\n",
-        "                           'South': [2, 3, 4, 5, 6],\n",
-        "                           'North': [3, 4, 5, 6, 7]})\n",
-        "    y_data = pd.Series([10, 12, 14, 16, 18])\n",
+        "        print(summary_df.to_string(index=False))  # Print the summary\n",
         "\n",
-        "    # Create an instance of the class\n",
-        "    model = RegressionModel(x_data, y_data, create_intercept=True, regression_type='ols')\n",
         "\n",
-        "    # Run OLS regression\n",
-        "    model.ols_regression()\n",
+        "# Example usage:\n",
+        "# Assuming `x_data` and `y_data` are pandas DataFrames containing your data.\n",
+        "# x_data = pd.DataFrame(...)  # Exogenous variables\n",
+        "# y_data = pd.Series(...)  # Endogenous variable\n",
         "\n",
-        "    # Display summary\n",
-        "    summary = model.summary()\n",
-        "    print(summary)\n",
-        "\n",
-        "if __name__ == \"__main__\":\n",
-        "    main()\n",
+        "# model = RegressionModel(x_data, y_data, create_intercept=True, regression_type='ols')\n",
+        "# model.ols_regression()\n",
+        "# model.summary()\n",
         "\n"
       ]
     }
