--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,12 +862,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
+        "outputId": "ebb24802-5865-4e84-dce6-ab9d7509cfdf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "               coefficient value  standard error   t-statistic       p-value\n",
+            "Variable name                                                               \n",
+            "const                   0.315789    1.163972e-16  2.713034e+15  1.104346e-46\n",
+            "x1                      1.947368    8.563305e-16  2.274085e+15  1.875213e-46\n",
+            "x2                     -0.052632    8.563305e-16 -6.146176e+13  9.498517e-42\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "import pandas as pd\n",
@@ -875,60 +891,54 @@
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
-        "        self.x = x.copy()  # Exogenous variables\n",
-        "        self.y = y.copy()  # Endogenous variable\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type.lower()\n",
-        "        self.results = {}  # Dictionary to store regression results\n",
-        "\n",
+        "        self.regression_type = regression_type\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
+        "        self.results = {}\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept (column of ones) to the exogenous variable data frame.\"\"\"\n",
-        "        self.x['intercept'] = 1\n",
+        "        \"\"\"Add a column of ones to x to serve as the intercept.\"\"\"\n",
+        "        self.x = sm.add_constant(self.x, has_constant='add')\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Performs OLS regression and stores the results in the dictionary.\"\"\"\n",
-        "        # Ensure correct order: intercept column should be first if present\n",
-        "        if 'intercept' in self.x.columns:\n",
-        "            X = self.x[['intercept'] + [col for col in self.x.columns if col != 'intercept']]\n",
-        "        else:\n",
-        "            X = self.x\n",
-        "\n",
-        "        # Fit the OLS model\n",
-        "        model = sm.OLS(self.y, X).fit()\n",
-        "        summary = model.summary2().tables[1]  # Retrieve coefficient table\n",
-        "\n",
-        "        # Populate the results dictionary\n",
-        "        for index, row in summary.iterrows():\n",
-        "            self.results[index] = {\n",
-        "                'coefficient': row['Coef.'],\n",
-        "                'standard_error': row['Std.Err.'],\n",
-        "                't_stat': row['t'],\n",
-        "                'p_value': row['P>|t|']\n",
+        "        \"\"\"Perform OLS regression and store the results in a dictionary.\"\"\"\n",
+        "        model = sm.OLS(self.y, self.x).fit()\n",
+        "        for param in model.params.index:\n",
+        "            self.results[param] = {\n",
+        "                \"coefficient\": model.params[param],\n",
+        "                \"standard_error\": model.bse[param],\n",
+        "                \"t_stat\": model.tvalues[param],\n",
+        "                \"p_value\": model.pvalues[param]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Displays the summary table with regression results.\"\"\"\n",
-        "        # Create a DataFrame from the results dictionary\n",
-        "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
-        "        summary_df.reset_index(inplace=True)\n",
-        "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error',\n",
-        "                              't-statistic', 'p-value']\n",
+        "        \"\"\"Display the regression results in a tabular format.\"\"\"\n",
+        "        summary_df = pd.DataFrame(self.results).T\n",
+        "        summary_df.columns = [\"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
+        "        summary_df.index.name = \"Variable name\"\n",
+        "        return summary_df\n",
         "\n",
-        "        print(summary_df.to_string(index=False))  # Print the summary\n",
+        "# Example usage with dummy data\n",
+        "if __name__ == \"__main__\":\n",
+        "    # Example data\n",
+        "    x_data = pd.DataFrame({\n",
+        "        'x1': [1, 2, 3, 4, 5],\n",
+        "        'x2': [5, 4, 3, 2, 1]\n",
+        "    })\n",
+        "    y_data = pd.Series([2, 4, 6, 8, 10])\n",
         "\n",
+        "    # Create an instance of RegressionModel\n",
+        "    model = RegressionModel(x=x_data, y=y_data, create_intercept=True, regression_type=\"ols\")\n",
         "\n",
-        "# Example usage:\n",
-        "# Assuming `x_data` and `y_data` are pandas DataFrames containing your data.\n",
-        "# x_data = pd.DataFrame(...)  # Exogenous variables\n",
-        "# y_data = pd.Series(...)  # Endogenous variable\n",
+        "    # Perform OLS regression\n",
+        "    model.ols_regression()\n",
         "\n",
-        "# model = RegressionModel(x_data, y_data, create_intercept=True, regression_type='ols')\n",
-        "# model.ols_regression()\n",
-        "# model.summary()\n",
+        "    # Print the summary table\n",
+        "    print(model.summary())\n",
         "\n"
       ]
     }
