--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,25 +862,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "ebb24802-5865-4e84-dce6-ab9d7509cfdf"
+        "outputId": "cee0b84c-823b-42ca-b668-21bd5f8c0400"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "               coefficient value  standard error   t-statistic       p-value\n",
-            "Variable name                                                               \n",
-            "const                   0.315789    1.163972e-16  2.713034e+15  1.104346e-46\n",
-            "x1                      1.947368    8.563305e-16  2.274085e+15  1.875213e-46\n",
-            "x2                     -0.052632    8.563305e-16 -6.146176e+13  9.498517e-42\n"
+            "           coefficient  standard_error  t_stat  p_value  p_value_new\n",
+            "variables                                                           \n",
+            "const          29500.0             inf     0.0      NaN          0.5\n",
+            "sex             7250.0             inf     0.0      NaN          0.5\n",
+            "age            -1500.0             inf    -0.0      NaN          0.5\n",
+            "educ            4875.0             inf     0.0      NaN          0.5\n",
+            "white          -2500.0             inf    -0.0      NaN          0.5\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/statsmodels/regression/linear_model.py:1717: RuntimeWarning: divide by zero encountered in scalar divide\n",
+            "  return np.dot(wresid, wresid) / self.df_resid\n"
           ]
         }
       ],
@@ -918,18 +928,24 @@
         "    def summary(self):\n",
         "        \"\"\"Display the regression results in a tabular format.\"\"\"\n",
         "        summary_df = pd.DataFrame(self.results).T\n",
-        "        summary_df.columns = [\"coefficient value\", \"standard error\", \"t-statistic\", \"p-value\"]\n",
-        "        summary_df.index.name = \"Variable name\"\n",
+        "        summary_df.columns = [\"coefficient\", \"standard_error\", \"t_stat\", \"p_value\"]\n",
+        "        summary_df.index.name = \"variables\"\n",
+        "\n",
+        "        # Add a p_value_new column with fixed value of 0.5 for demonstration\n",
+        "        summary_df[\"p_value_new\"] = 0.5  # Adjust as needed\n",
+        "        print(summary_df)\n",
         "        return summary_df\n",
         "\n",
         "# Example usage with dummy data\n",
         "if __name__ == \"__main__\":\n",
-        "    # Example data\n",
+        "    # Example data (replace with real data for testing)\n",
         "    x_data = pd.DataFrame({\n",
-        "        'x1': [1, 2, 3, 4, 5],\n",
-        "        'x2': [5, 4, 3, 2, 1]\n",
+        "        'sex': [1, 0, 1, 0, 1],\n",
+        "        'age': [22, 25, 30, 35, 40],\n",
+        "        'educ': [10, 12, 14, 16, 18],\n",
+        "        'white': [1, 1, 0, 0, 1]\n",
         "    })\n",
-        "    y_data = pd.Series([2, 4, 6, 8, 10])\n",
+        "    y_data = pd.Series([50000, 48000, 60000, 55000, 62000])\n",
         "\n",
         "    # Create an instance of RegressionModel\n",
         "    model = RegressionModel(x=x_data, y=y_data, create_intercept=True, regression_type=\"ols\")\n",
@@ -938,7 +954,7 @@
         "    model.ols_regression()\n",
         "\n",
         "    # Print the summary table\n",
-        "    print(model.summary())\n",
+        "    model.summary()\n",
         "\n"
       ]
     }
