--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,35 +862,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "cee0b84c-823b-42ca-b668-21bd5f8c0400"
+        "outputId": "61dafaec-c81f-4fd4-8356-d871181e7694"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "           coefficient  standard_error  t_stat  p_value  p_value_new\n",
-            "variables                                                           \n",
-            "const          29500.0             inf     0.0      NaN          0.5\n",
-            "sex             7250.0             inf     0.0      NaN          0.5\n",
-            "age            -1500.0             inf    -0.0      NaN          0.5\n",
-            "educ            4875.0             inf     0.0      NaN          0.5\n",
-            "white          -2500.0             inf    -0.0      NaN          0.5\n"
+            "       Coefficient Value  Standard Error  T-Statistic   P-Value\n",
+            "const           0.400000        0.565685     0.707107  0.530478\n",
+            "East            0.866667        0.692820     1.250926  0.299635\n",
+            "South           1.266667        0.133333     9.500000  0.002473\n",
+            "North           1.666667        0.442217     3.768892  0.032691\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/usr/local/lib/python3.10/dist-packages/statsmodels/regression/linear_model.py:1717: RuntimeWarning: divide by zero encountered in scalar divide\n",
-            "  return np.dot(wresid, wresid) / self.df_resid\n"
+            "/usr/local/lib/python3.10/dist-packages/statsmodels/stats/stattools.py:74: ValueWarning: omni_normtest is not valid with less than 8 observations; 5 samples were given.\n",
+            "  warn(\"omni_normtest is not valid with less than 8 observations; %i \"\n"
           ]
         }
       ],
@@ -901,60 +899,62 @@
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
-        "        if self.create_intercept:\n",
-        "            self.add_intercept()\n",
         "        self.results = {}\n",
         "\n",
+        "        if self.create_intercept:\n",
+        "            self.add_intercept()\n",
+        "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Add a column of ones to x to serve as the intercept.\"\"\"\n",
-        "        self.x = sm.add_constant(self.x, has_constant='add')\n",
+        "        \"\"\"Adds an intercept column to x.\"\"\"\n",
+        "        self.x = sm.add_constant(self.x)\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Perform OLS regression and store the results in a dictionary.\"\"\"\n",
+        "        \"\"\"Performs OLS regression and stores results in a dictionary.\"\"\"\n",
         "        model = sm.OLS(self.y, self.x).fit()\n",
-        "        for param in model.params.index:\n",
-        "            self.results[param] = {\n",
-        "                \"coefficient\": model.params[param],\n",
-        "                \"standard_error\": model.bse[param],\n",
-        "                \"t_stat\": model.tvalues[param],\n",
-        "                \"p_value\": model.pvalues[param]\n",
+        "        summary = model.summary2().tables[1]\n",
+        "\n",
+        "        # Extract coefficients, standard errors, t-stats, and p-values\n",
+        "        for index, row in summary.iterrows():\n",
+        "            self.results[index] = {\n",
+        "                'coefficient': row['Coef.'],\n",
+        "                'standard_error': row['Std.Err.'],\n",
+        "                't_stat': row['t'],\n",
+        "                'p_value': row['P>|t|']\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Display the regression results in a tabular format.\"\"\"\n",
-        "        summary_df = pd.DataFrame(self.results).T\n",
-        "        summary_df.columns = [\"coefficient\", \"standard_error\", \"t_stat\", \"p_value\"]\n",
-        "        summary_df.index.name = \"variables\"\n",
+        "        \"\"\"Prints a summary table of the regression results.\"\"\"\n",
+        "        if not self.results:\n",
+        "            print(\"No regression results available. Please run ols_regression() first.\")\n",
+        "            return\n",
         "\n",
-        "        # Add a p_value_new column with fixed value of 0.5 for demonstration\n",
-        "        summary_df[\"p_value_new\"] = 0.5  # Adjust as needed\n",
-        "        print(summary_df)\n",
-        "        return summary_df\n",
+        "        summary_table = pd.DataFrame(self.results).T\n",
+        "        summary_table.columns = [\n",
+        "            \"Coefficient Value\", \"Standard Error\", \"T-Statistic\", \"P-Value\"\n",
+        "        ]\n",
+        "        print(summary_table)\n",
         "\n",
-        "# Example usage with dummy data\n",
+        "# Example Usage\n",
         "if __name__ == \"__main__\":\n",
-        "    # Example data (replace with real data for testing)\n",
-        "    x_data = pd.DataFrame({\n",
-        "        'sex': [1, 0, 1, 0, 1],\n",
-        "        'age': [22, 25, 30, 35, 40],\n",
-        "        'educ': [10, 12, 14, 16, 18],\n",
-        "        'white': [1, 1, 0, 0, 1]\n",
-        "    })\n",
-        "    y_data = pd.Series([50000, 48000, 60000, 55000, 62000])\n",
+        "    # Example data\n",
+        "    data = {\n",
+        "        'East': [1, 2, 3, 4, 5],\n",
+        "        'South': [2, 3, 4, 5, 6],\n",
+        "        'North': [3, 4, 5, 6, 7]\n",
+        "    }\n",
+        "    x = pd.DataFrame(data)\n",
+        "    y = pd.Series([10, 12, 15, 20, 25])\n",
         "\n",
-        "    # Create an instance of RegressionModel\n",
-        "    model = RegressionModel(x=x_data, y=y_data, create_intercept=True, regression_type=\"ols\")\n",
-        "\n",
-        "    # Perform OLS regression\n",
+        "    # Create a RegressionModel object and run OLS regression\n",
+        "    model = RegressionModel(x, y, create_intercept=True, regression_type='ols')\n",
         "    model.ols_regression()\n",
-        "\n",
-        "    # Print the summary table\n",
         "    model.summary()\n",
+        "\n",
         "\n"
       ]
     }
