--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,33 +862,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "61dafaec-c81f-4fd4-8356-d871181e7694"
+        "outputId": "24934eff-870b-4e5e-ea75-fdf8c2665305"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "       Coefficient Value  Standard Error  T-Statistic   P-Value\n",
-            "const           0.400000        0.565685     0.707107  0.530478\n",
-            "East            0.866667        0.692820     1.250926  0.299635\n",
-            "South           1.266667        0.133333     9.500000  0.002473\n",
-            "North           1.666667        0.442217     3.768892  0.032691\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/statsmodels/stats/stattools.py:74: ValueWarning: omni_normtest is not valid with less than 8 observations; 5 samples were given.\n",
-            "  warn(\"omni_normtest is not valid with less than 8 observations; %i \"\n"
+            "           Coefficient Value  Standard Error  T-Statistic   P-Value\n",
+            "East                0.866667        0.692820     1.250926  0.299635\n",
+            "South               1.266667        0.133333     9.500000  0.002473\n",
+            "North               1.666667        0.442217     3.768892  0.032691\n",
+            "Intercept           0.400000        0.565685     0.707107  0.530478\n"
           ]
         }
       ],
@@ -911,20 +903,19 @@
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Adds an intercept column to x.\"\"\"\n",
-        "        self.x = sm.add_constant(self.x)\n",
+        "        self.x['Intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"Performs OLS regression and stores results in a dictionary.\"\"\"\n",
         "        model = sm.OLS(self.y, self.x).fit()\n",
-        "        summary = model.summary2().tables[1]\n",
         "\n",
         "        # Extract coefficients, standard errors, t-stats, and p-values\n",
-        "        for index, row in summary.iterrows():\n",
-        "            self.results[index] = {\n",
-        "                'coefficient': row['Coef.'],\n",
-        "                'standard_error': row['Std.Err.'],\n",
-        "                't_stat': row['t'],\n",
-        "                'p_value': row['P>|t|']\n",
+        "        for var_name in model.params.index:\n",
+        "            self.results[var_name] = {\n",
+        "                'coefficient': model.params[var_name],\n",
+        "                'standard_error': model.bse[var_name],\n",
+        "                't_stat': model.tvalues[var_name],\n",
+        "                'p_value': model.pvalues[var_name]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
@@ -954,6 +945,10 @@
         "    model = RegressionModel(x, y, create_intercept=True, regression_type='ols')\n",
         "    model.ols_regression()\n",
         "    model.summary()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n"
       ]
