--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -862,14 +862,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "cba0586c-1c67-4d77-a9ea-352685b60c8f"
+        "outputId": "c839d174-f8a0-4eb0-a161-b00ebd9507ae"
       },
       "outputs": [
         {
@@ -887,29 +887,37 @@
       "source": [
         "#si-exercise\n",
         "import pandas as pd\n",
-        "import numpy as np\n",
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
+        "        \"\"\"\n",
+        "        Initialize the RegressionModel with input data and settings.\n",
+        "\n",
+        "        Args:\n",
+        "            x (DataFrame): Independent variables.\n",
+        "            y (Series or DataFrame): Dependent variable.\n",
+        "            create_intercept (bool): Whether to add an intercept column.\n",
+        "            regression_type (str): Type of regression ('ols' or 'logit').\n",
+        "        \"\"\"\n",
         "        self.x = x\n",
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
-        "        self.results = {}\n",
+        "        self.results = {}  # Store the regression results.\n",
         "\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept column to x.\"\"\"\n",
-        "        self.x['Intercept'] = 1\n",
+        "        \"\"\"Adds an intercept column to the DataFrame x.\"\"\"\n",
+        "        self.x['Intercept'] = 1  # Adds a column of ones to represent the intercept.\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"Performs OLS regression and stores results in a dictionary.\"\"\"\n",
-        "        model = sm.OLS(self.y, self.x).fit()\n",
+        "        model = sm.OLS(self.y, self.x).fit()  # Fit the model.\n",
         "\n",
-        "        # Extract coefficients, standard errors, t-stats, and p-values\n",
+        "        # Extract coefficients, standard errors, t-statistics, and p-values.\n",
         "        for var_name in model.params.index:\n",
         "            self.results[var_name] = {\n",
         "                'coefficient': model.params[var_name],\n",
@@ -924,31 +932,26 @@
         "            print(\"No regression results available. Please run ols_regression() first.\")\n",
         "            return\n",
         "\n",
+        "        # Create a DataFrame from the results dictionary.\n",
         "        summary_table = pd.DataFrame(self.results).T\n",
         "        summary_table.columns = [\n",
         "            \"Coefficient Value\", \"Standard Error\", \"T-Statistic\", \"P-Value\"\n",
         "        ]\n",
         "        print(summary_table)\n",
         "\n",
-        "# Example Usage\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Example data\n",
-        "    data = {\n",
-        "        'East': [1, 2, 3, 4, 5],\n",
-        "        'South': [2, 3, 4, 5, 6],\n",
-        "        'North': [3, 4, 5, 6, 7]\n",
-        "    }\n",
-        "    x = pd.DataFrame(data)\n",
-        "    y = pd.Series([10, 12, 15, 20, 25])\n",
+        "# Example usage\n",
+        "data = {\n",
+        "    'East': [1, 2, 3, 4, 5],\n",
+        "    'South': [2, 3, 4, 5, 6],\n",
+        "    'North': [3, 4, 5, 6, 7]\n",
+        "}\n",
+        "x = pd.DataFrame(data)\n",
+        "y = pd.Series([10, 12, 15, 20, 25])\n",
         "\n",
-        "    # Create a RegressionModel object and run OLS regression\n",
-        "    model = RegressionModel(x, y, create_intercept=True, regression_type='ols')\n",
-        "    model.ols_regression()\n",
-        "    model.summary()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "# Create a RegressionModel object and run OLS regression\n",
+        "reg = RegressionModel(x, y, create_intercept=True)\n",
+        "reg.ols_regression()\n",
+        "reg.summary()\n",
         "\n",
         "\n"
       ]
