--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -384,6 +384,12 @@
         "id": "96be259f-345e-4e4a-b95c-dd6eae210bf9"
       },
       "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# This is formatted as code\n",
+        "```\n",
+        "\n",
         "Again, we will start with our 1-D array, and in the cell below, we will make it a 2-D array, or a matrix:"
       ]
     },
@@ -862,98 +868,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "c839d174-f8a0-4eb0-a161-b00ebd9507ae"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "           Coefficient Value  Standard Error  T-Statistic   P-Value\n",
-            "East                0.866667        0.692820     1.250926  0.299635\n",
-            "South               1.266667        0.133333     9.500000  0.002473\n",
-            "North               1.666667        0.442217     3.768892  0.032691\n",
-            "Intercept           0.400000        0.565685     0.707107  0.530478\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
+        "\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import statsmodels.api as sm\n",
+        "import scipy.stats as stats\n",
+        "\n",
+        "#si-exercise\n",
         "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
-        "        \"\"\"\n",
-        "        Initialize the RegressionModel with input data and settings.\n",
-        "\n",
-        "        Args:\n",
-        "            x (DataFrame): Independent variables.\n",
-        "            y (Series or DataFrame): Dependent variable.\n",
-        "            create_intercept (bool): Whether to add an intercept column.\n",
-        "            regression_type (str): Type of regression ('ols' or 'logit').\n",
-        "        \"\"\"\n",
-        "        self.x = x\n",
-        "        self.y = y\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
+        "        self.x = x.copy()\n",
+        "        self.y = y.copy()\n",
         "        self.create_intercept = create_intercept\n",
-        "        self.regression_type = regression_type\n",
-        "        self.results = {}  # Store the regression results.\n",
+        "        self.regression_type = regression_type.lower()\n",
+        "        self.results = {}\n",
         "\n",
+        "        # Add intercept if specified\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
+        "        # Perform regression\n",
+        "        if self.regression_type == \"ols\":\n",
+        "            self.ols_regression()\n",
+        "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept column to the DataFrame x.\"\"\"\n",
-        "        self.x['Intercept'] = 1  # Adds a column of ones to represent the intercept.\n",
+        "        \"\"\"Adds a column of ones as an intercept to x.\"\"\"\n",
+        "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Performs OLS regression and stores results in a dictionary.\"\"\"\n",
-        "        model = sm.OLS(self.y, self.x).fit()  # Fit the model.\n",
+        "        \"\"\"Performs OLS regression and stores the results.\"\"\"\n",
+        "        x_np = self.x.values\n",
+        "        y_np = self.y.values\n",
         "\n",
-        "        # Extract coefficients, standard errors, t-statistics, and p-values.\n",
-        "        for var_name in model.params.index:\n",
+        "        # Calculate coefficients using OLS\n",
+        "        coef = np.linalg.inv(x_np.T @ x_np) @ x_np.T @ y_np\n",
+        "\n",
+        "        # Standard errors\n",
+        "        residuals = y_np - x_np @ coef\n",
+        "        residual_sum_of_squares = residuals.T @ residuals\n",
+        "        degrees_of_freedom = len(y_np) - len(coef)\n",
+        "        variance = residual_sum_of_squares / degrees_of_freedom\n",
+        "        covariance_matrix = variance * np.linalg.inv(x_np.T @ x_np)\n",
+        "        standard_errors = np.sqrt(np.diag(covariance_matrix))\n",
+        "\n",
+        "        # T-statistics and p-values\n",
+        "        t_stats = coef / standard_errors\n",
+        "        p_values = [2 * (1 - stats.t.cdf(np.abs(t), df=degrees_of_freedom)) for t in t_stats]\n",
+        "\n",
+        "        # Store the results in a dictionary\n",
+        "        for idx, var_name in enumerate(self.x.columns):\n",
         "            self.results[var_name] = {\n",
-        "                'coefficient': model.params[var_name],\n",
-        "                'standard_error': model.bse[var_name],\n",
-        "                't_stat': model.tvalues[var_name],\n",
-        "                'p_value': model.pvalues[var_name]\n",
+        "                'coefficient': coef[idx],\n",
+        "                'standard_error': standard_errors[idx],\n",
+        "                't_stat': t_stats[idx],\n",
+        "                'p_value': p_values[idx]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Prints a summary table of the regression results.\"\"\"\n",
-        "        if not self.results:\n",
-        "            print(\"No regression results available. Please run ols_regression() first.\")\n",
-        "            return\n",
+        "        \"\"\"Prints a summary of the regression results.\"\"\"\n",
+        "        print(f\"{'Variable Name':<15}{'Coefficient':<15}{'Standard Error':<20}{'T-Statistic':<15}{'P-Value':<10}\")\n",
+        "        print(\"=\" * 75)\n",
+        "        for var_name, stats in self.results.items():\n",
+        "            print(f\"{var_name:<15}{stats['coefficient']:<15.4f}{stats['standard_error']:<20.4f}{stats['t_stat']:<15.4f}{stats['p_value']:<10.4f}\")\n",
         "\n",
-        "        # Create a DataFrame from the results dictionary.\n",
-        "        summary_table = pd.DataFrame(self.results).T\n",
-        "        summary_table.columns = [\n",
-        "            \"Coefficient Value\", \"Standard Error\", \"T-Statistic\", \"P-Value\"\n",
-        "        ]\n",
-        "        print(summary_table)\n",
-        "\n",
-        "# Example usage\n",
-        "data = {\n",
-        "    'East': [1, 2, 3, 4, 5],\n",
-        "    'South': [2, 3, 4, 5, 6],\n",
-        "    'North': [3, 4, 5, 6, 7]\n",
-        "}\n",
-        "x = pd.DataFrame(data)\n",
-        "y = pd.Series([10, 12, 15, 20, 25])\n",
-        "\n",
-        "# Create a RegressionModel object and run OLS regression\n",
-        "reg = RegressionModel(x, y, create_intercept=True)\n",
-        "reg.ols_regression()\n",
-        "reg.summary()\n",
-        "\n",
-        "\n"
+        "# Example usage:\n",
+        "# Assuming x and y are provided as pandas dataframes with proper shape and values\n",
+        "# x = pd.DataFrame({...})\n",
+        "# y = pd.DataFrame({...})\n",
+        "# model = RegressionModel(x, y)\n",
+        "# model.summary()\n"
       ]
     }
   ],
