--- a/lesson.ipynb
+++ b/lesson.ipynb
@@ -868,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 11,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -877,75 +877,56 @@
       "source": [
         "#si-exercise\n",
         "\n",
-        "import pandas as pd\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "import statsmodels.api as sm\n",
         "import scipy.stats as stats\n",
         "\n",
-        "#si-exercise\n",
-        "\n",
         "class RegressionModel:\n",
-        "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
-        "        self.x = x.copy()\n",
-        "        self.y = y.copy()\n",
+        "    def __init__(self, x, y, create_intercept=True, regression_type='ols'):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type.lower()\n",
-        "        self.results = {}\n",
         "\n",
-        "        # Add intercept if specified\n",
         "        if self.create_intercept:\n",
         "            self.add_intercept()\n",
         "\n",
-        "        # Perform regression\n",
-        "        if self.regression_type == \"ols\":\n",
-        "            self.ols_regression()\n",
-        "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds a column of ones as an intercept to x.\"\"\"\n",
         "        self.x['intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Performs OLS regression and stores the results.\"\"\"\n",
-        "        x_np = self.x.values\n",
-        "        y_np = self.y.values\n",
-        "\n",
-        "        # Calculate coefficients using OLS\n",
-        "        coef = np.linalg.inv(x_np.T @ x_np) @ x_np.T @ y_np\n",
-        "\n",
-        "        # Standard errors\n",
-        "        residuals = y_np - x_np @ coef\n",
-        "        residual_sum_of_squares = residuals.T @ residuals\n",
-        "        degrees_of_freedom = len(y_np) - len(coef)\n",
-        "        variance = residual_sum_of_squares / degrees_of_freedom\n",
-        "        covariance_matrix = variance * np.linalg.inv(x_np.T @ x_np)\n",
-        "        standard_errors = np.sqrt(np.diag(covariance_matrix))\n",
-        "\n",
-        "        # T-statistics and p-values\n",
-        "        t_stats = coef / standard_errors\n",
-        "        p_values = [2 * (1 - stats.t.cdf(np.abs(t), df=degrees_of_freedom)) for t in t_stats]\n",
-        "\n",
-        "        # Store the results in a dictionary\n",
-        "        for idx, var_name in enumerate(self.x.columns):\n",
-        "            self.results[var_name] = {\n",
-        "                'coefficient': coef[idx],\n",
-        "                'standard_error': standard_errors[idx],\n",
-        "                't_stat': t_stats[idx],\n",
-        "                'p_value': p_values[idx]\n",
-        "            }\n",
+        "        if self.regression_type == 'ols':\n",
+        "            model = sm.OLS(self.y, self.x).fit()\n",
+        "            params = model.params\n",
+        "            bse = model.bse\n",
+        "            tvalues = model.tvalues\n",
+        "            pvalues = model.pvalues\n",
+        "            self.results = {}\n",
+        "            for variable in params.index:\n",
+        "                self.results[variable] = {\n",
+        "                    'coefficient': params[variable],\n",
+        "                    'standard_error': bse[variable],\n",
+        "                    't_stat': tvalues[variable],\n",
+        "                    'p_value': pvalues[variable]\n",
+        "                }\n",
+        "        else:\n",
+        "            raise ValueError(\"Unsupported regression type. Only 'ols' is supported at the moment.\")\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Prints a summary of the regression results.\"\"\"\n",
-        "        print(f\"{'Variable Name':<15}{'Coefficient':<15}{'Standard Error':<20}{'T-Statistic':<15}{'P-Value':<10}\")\n",
-        "        print(\"=\" * 75)\n",
-        "        for var_name, stats in self.results.items():\n",
-        "            print(f\"{var_name:<15}{stats['coefficient']:<15.4f}{stats['standard_error']:<20.4f}{stats['t_stat']:<15.4f}{stats['p_value']:<10.4f}\")\n",
+        "        if not hasattr(self, 'results'):\n",
+        "            raise AttributeError(\"The model hasn't been fitted yet. Call the ols_regression method first.\")\n",
+        "        summary_df = pd.DataFrame.from_dict(self.results, orient='index')\n",
+        "        summary_df = summary_df.reset_index()\n",
+        "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
+        "        return summary_df\n",
         "\n",
-        "# Example usage:\n",
-        "# Assuming x and y are provided as pandas dataframes with proper shape and values\n",
-        "# x = pd.DataFrame({...})\n",
-        "# y = pd.DataFrame({...})\n",
-        "# model = RegressionModel(x, y)\n",
-        "# model.summary()\n"
+        "# Example Usage:\n",
+        "# Assuming x and y are DataFrames\n",
+        "# model = RegressionModel(x, y, create_intercept=True, regression_type='ols')\n",
+        "# model.ols_regression()\n",
+        "# print(model.summary())\n",
+        "\n"
       ]
     }
   ],
