--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,33 +862,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
-        "outputId": "3011df23-29cc-4aa2-b70f-5111ca1e477e"
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Variable name   Coefficient  Standard Error  t-statistic  p-value   \n",
-            "-----------------------------------------------------------------\n",
-            "const           388.809      0.094           4127.137     0.000     \n",
-            "East            1.928        0.094           20.584       0.000     \n",
-            "South           5.071        0.091           55.659       0.000     \n",
-            "North           -23.875      0.099           -241.944     0.000     \n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#si-exercise\n",
-        "import numpy as np\n",
+        "\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "import statsmodels.api as sm\n",
         "\n",
         "class RegressionModel:\n",
@@ -897,55 +881,42 @@
         "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "        self.regression_type = regression_type\n",
-        "        if self.create_intercept:\n",
-        "            self.add_intercept()\n",
         "        self.results = {}\n",
         "\n",
+        "        if create_intercept:\n",
+        "            self.add_intercept()\n",
+        "\n",
         "    def add_intercept(self):\n",
-        "        \"\"\"Adds an intercept column to the x DataFrame.\"\"\"\n",
+        "        \"\"\"Add an intercept column to x if create_intercept is True.\"\"\"\n",
         "        self.x = sm.add_constant(self.x)\n",
         "\n",
         "    def ols_regression(self):\n",
-        "        \"\"\"Estimates the OLS regression and stores the results.\"\"\"\n",
-        "        model = sm.OLS(self.y, self.x).fit()\n",
-        "        summary = model.summary2().tables[1]\n",
+        "        \"\"\"Perform OLS regression and store the results in the results dictionary.\"\"\"\n",
+        "        model = sm.OLS(self.y, self.x)\n",
+        "        ols_results = model.fit()\n",
         "\n",
-        "        # Loop through each variable and store the regression results in a dictionary\n",
-        "        for idx, row in summary.iterrows():\n",
-        "            self.results[idx] = {\n",
-        "                'coefficient': row['Coef.'],\n",
-        "                'standard_error': row['Std.Err.'],\n",
-        "                't_stat': row['t'],\n",
-        "                'p_value': row['P>|t|']\n",
+        "        for index, variable in enumerate(ols_results.params.index):\n",
+        "            self.results[variable] = {\n",
+        "                \"coefficient\": ols_results.params[variable],\n",
+        "                \"standard_error\": ols_results.bse[variable],\n",
+        "                \"t_stat\": ols_results.tvalues[variable],\n",
+        "                \"p_value\": ols_results.pvalues[variable]\n",
         "            }\n",
         "\n",
         "    def summary(self):\n",
-        "        \"\"\"Displays the regression results in a similar format to the image.\"\"\"\n",
-        "        print(f\"{'Variable name':<15} {'Coefficient':<12} {'Standard Error':<15} {'t-statistic':<12} {'p-value':<10}\")\n",
-        "        print(\"-\" * 65)\n",
+        "        \"\"\"Display the regression results in a table format.\"\"\"\n",
+        "        summary_df = pd.DataFrame({\n",
+        "            \"Variable name\": list(self.results.keys()),\n",
+        "            \"coefficient value\": [self.results[var][\"coefficient\"] for var in self.results],\n",
+        "            \"standard error\": [self.results[var][\"standard_error\"] for var in self.results],\n",
+        "            \"t-statistic\": [self.results[var][\"t_stat\"] for var in self.results],\n",
+        "            \"p-value\": [self.results[var][\"p_value\"] for var in self.results]\n",
+        "        })\n",
         "\n",
-        "        for var, stats in self.results.items():\n",
-        "            print(f\"{var:<15} {stats['coefficient']:<12.3f} {stats['standard_error']:<15.3f} {stats['t_stat']:<12.3f} {stats['p_value']:<10.3f}\")\n",
+        "        return summary_df\n",
         "\n",
-        "# Example of how the class can be used\n",
-        "if __name__ == \"__main__\":\n",
-        "    # Generate some sample data for testing\n",
-        "    np.random.seed(0)\n",
-        "    x = pd.DataFrame({\n",
-        "        'East': np.random.randn(100),\n",
-        "        'South': np.random.randn(100),\n",
-        "        'North': np.random.randn(100)\n",
-        "    })\n",
-        "    y = pd.DataFrame({\n",
-        "        'DependentVar': 389 + 2 * x['East'] + 5 * x['South'] - 24 * x['North'] + np.random.randn(100)\n",
-        "    })\n",
         "\n",
-        "    # Create an instance of the RegressionModel class\n",
-        "    model = RegressionModel(x, y, create_intercept=True, regression_type=\"ols\")\n",
-        "\n",
-        "    # Run OLS regression and display summary\n",
-        "    model.ols_regression()\n",
-        "    model.summary()\n"
+        "\n"
       ]
     }
   ],
