--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -872,7 +872,7 @@
         "#si-exercise\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import scipy\n",
+        "from scipy.stats import norm\n",
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool):\n",
@@ -912,7 +912,9 @@
         "        t_stats = self.coefficients / standard_errors\n",
         "\n",
         "        # Calculate p-values (two-tailed)\n",
-        "        p_values = (1 - self._t_distribution_cdf(np.abs(t_stats), n - p))\n",
+        "        p_values = (1 - self._t_distribution_cdf(t_stats, n - p))\n",
+        "        #p_values = (1 - self._t_distribution_cdf(np.abs(t_stats), n - p))\n",
+        "        #p_values = 2 * (1 - norm.cdf(np.abs(t_stats)))\n",
         "\n",
         "        # Store results in a dictionary\n",
         "        self.results = {\n",
@@ -938,7 +940,7 @@
         "        summary_df.reset_index(inplace=True)\n",
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
-        "        return summary_df"
+        "        return summary_df\n"
       ]
     }
   ],
