--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,12 +862,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
-        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
+        "outputId": "03c71402-9e93-4142-e0df-03f52699436a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Variable name  coefficient value  standard error  t-statistic  p-value\n",
+            "0           sex           49.75000             NaN          NaN      NaN\n",
+            "1           age            0.65625             NaN          NaN      NaN\n",
+            "2          educ            1.93750             NaN          NaN      NaN\n",
+            "3         white            6.59375             NaN          NaN      NaN\n",
+            "4     intercept           -7.50000             NaN          NaN      NaN\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-3-2040a233af7f>:34: RuntimeWarning: invalid value encountered in sqrt\n",
+            "  standard_errors = np.sqrt(np.diag(residual_variance * XtX_inv))\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "import numpy as np\n",
@@ -885,7 +910,7 @@
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
-        "        self.x = self.x.copy()  # Avoid SettingWithCopyWarning.\n",
+        "        self.x = self.x.copy()\n",
         "        self.x.loc[:, 'intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
@@ -931,11 +956,26 @@
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
         "        expected_vars = {'sex', 'age', 'educ', 'white', 'intercept'}\n",
-        "        missing_vars = expected_vars - set(summary_df['Variable name'])\n",
-        "        if missing_vars:\n",
-        "            raise ValueError(f\"Missing expected variables in summary: {missing_vars}\")\n",
+        "        actual_vars = set(summary_df['Variable name'])\n",
         "\n",
-        "        return summary_df\n"
+        "        if not expected_vars.issubset(actual_vars):\n",
+        "            raise ValueError(f\"Missing variables in summary: {expected_vars - actual_vars}\")\n",
+        "\n",
+        "        return summary_df\n",
+        "\n",
+        "# Example usage\n",
+        "data = {\n",
+        "    'sex': [0, 1, 0, 1],\n",
+        "    'age': [22, 35, 45, 50],\n",
+        "    'educ': [12, 16, 14, 18],\n",
+        "    'white': [1, 0, 1, 1]\n",
+        "}\n",
+        "x = pd.DataFrame(data)\n",
+        "y = pd.DataFrame([30, 40, 50, 60])\n",
+        "\n",
+        "model = RegressionModel(x, y, create_intercept=True)\n",
+        "model.ols_regression()\n",
+        "print(model.summary())\n"
       ]
     }
   ],
