--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
       "metadata": {
         "id": "adbc4202-9586-4e18-b8d6-54291c2174f1"
@@ -872,12 +872,12 @@
         "#si-exercise\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from scipy.stats import t as t_dist\n",
+        "from scipy.stats import norm\n",
         "\n",
         "class RegressionModel:\n",
         "    def __init__(self, x: pd.DataFrame, y: pd.DataFrame, create_intercept: bool):\n",
-        "        self.x = x.copy()  # Avoid SettingWithCopyWarning by using .copy()\n",
-        "        self.y = y.copy()  # Copy to avoid similar issues\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
         "        self.create_intercept = create_intercept\n",
         "\n",
         "        if self.create_intercept:\n",
@@ -885,15 +885,17 @@
         "\n",
         "    def add_intercept(self):\n",
         "        \"\"\"Adds a column of ones to the x DataFrame for the intercept.\"\"\"\n",
-        "        self.x['intercept'] = 1\n",
+        "        self.x = self.x.copy()  # Avoids SettingWithCopyWarning\n",
+        "        self.x.loc[:, 'intercept'] = 1\n",
         "\n",
         "    def ols_regression(self):\n",
         "        \"\"\"Estimates OLS regression results using NumPy.\"\"\"\n",
-        "        # Convert DataFrames to NumPy arrays\n",
+        "\n",
+        "        # Convert to NumPy arrays\n",
         "        X = self.x.values\n",
         "        Y = self.y.values.flatten()\n",
         "\n",
-        "        # Calculate coefficients using the normal equation: (X'X)^(-1)X'Y\n",
+        "        # Calculate coefficients using the Normal Equation: (X'X)^(-1)X'Y\n",
         "        XtX_inv = np.linalg.inv(X.T @ X)\n",
         "        XtY = X.T @ Y\n",
         "        self.coefficients = XtX_inv @ XtY\n",
@@ -909,7 +911,7 @@
         "        t_stats = self.coefficients / standard_errors\n",
         "\n",
         "        # Calculate p-values (two-tailed)\n",
-        "        p_values = 2 * (1 - t_dist.cdf(np.abs(t_stats), df=n - p))\n",
+        "        p_values = 2 * (1 - norm.cdf(np.abs(t_stats)))\n",
         "\n",
         "        # Store results in a dictionary\n",
         "        self.results = {\n",
@@ -930,14 +932,9 @@
         "        summary_df.reset_index(inplace=True)\n",
         "        summary_df.columns = ['Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value']\n",
         "\n",
-        "        # Ensure all required variables are present in the summary\n",
-        "        expected_vars = {'sex', 'age', 'educ', 'white', 'intercept'}\n",
-        "        actual_vars = set(summary_df['Variable name'])\n",
-        "\n",
-        "        if not expected_vars.issubset(actual_vars):\n",
-        "            raise ValueError(f\"Missing variables in summary: {expected_vars - actual_vars}\")\n",
-        "\n",
         "        return summary_df\n",
+        "\n",
+        "\n",
         "\n"
       ]
     }
